# fkb

./: .gitignore  Makefile  README.md  pyproject.toml
fkb/: __init__.py  __main__.py  cl_parser.py  config.py  database.py  filesystem.py  initialize.py  main.py  object.py
fkb/commands/: add.py  config.py  delete.py  erase.py  grep.py  search.py  update.py  watch.py
fkb/commands/backup/: export.py  ingest.py
fkb/commands/note/: catnote.py  deletenote.py  editnote.py
fkb/printer/: grep.py  search.py  style.py
