[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filekb"
version = "0.1"
authors = [
  { name="ArktisDev"},
]
description = "A knowledge base with file tracking and document note integration"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.scripts]
fkb = "fkb.main:Main"